# b00t-wiggums

./: .gitignore  AGENTS.md  CLAUDE.md  OPERATIONS.md  README-MCP.md  README.md  justfile  prd.json  progress.txt  pyproject.toml  ralph.sh  ralph_cli.py  ralphython.py  tasks.json  test_ralph_mcp.py
.github/workflows/: python-ci.yml
ralph/: README.md  __init__.py  __main__.py  archiver.py  budget_guardian.py  config.py  entrypoint.py  executors.py  file_manager.py  logging_utils.py  progress_display.py  ralph_cli.py  runner.py  taskmaster_adapter.py
schemas/: taskmaster-schema.json
skills/officer-clancy/: SKILL.md
skills/prd/: SKILL.md
skills/ralph/: SKILL.md
skills/ralph-prd/: SKILL.md
tests/: conftest.py  test_archiver.py  test_budget_guardian.py  test_config.py  test_entrypoint.py  test_executors.py  test_file_manager.py  test_logging_utils.py  test_progress_display.py  test_ralph_cli.py  test_ralph_integration.py  test_ralphython.py  test_runner.py  test_taskmaster_adapter.py
tests/tool_stubs/: amp  claude  codex  opencode
